--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
     font-size: medium; 
 }
 
-button:hover{
+.navbar button:hover{
     color: rgb(185, 20, 185);
     cursor: pointer;
 }
@@ -54,6 +54,90 @@ button:hover{
     padding: 10px 10px 10px 10px;
 }
 
+header{
+    display: flex;
+    top:0;
+    width: 90%;
+    background-color: #f1f1f1;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+header div{
+    background-color: white;
+    width: 35%;
+    height: 50%;
+    padding: 1% 2%;
+    border-radius: 5%;
+    margin: 5%;
+}
+header div p{
+    font-size: 35px;
+    font-weight: bolder;
+}
+
+section{
+    display: flex;
+    width: 84%;
+    margin-left: 8%;
+    margin-right: 8%;
+    flex-wrap: wrap;
+}
+#Courses_head button {
+    border: 0;
+    background-color: white;
+    color: gray;
+    font-weight: bold;
+    font-size: larger;
+    cursor: pointer;
+}
+#Courses_head button:hover{
+    color: black;
+}
+#Courses_head button:focus{
+    color: black;
+    cursor:default;
+}
+
+#main_courses{
+    border: black solid 1px;
+    width: 100%;
+    margin-top:3% ;
+    padding: 3% 3% 3% 3%;
+    
+}
+#explore_course{
+    border: black solid 1px;
+    color: black;
+    font-weight: bold;
+    padding: 1%;
+    background-color: white;
+}
+#explore_course:hover{
+    background-color: #f1f1f1;
+    cursor: pointer;
+}
+
+.course_card{
+    width: 18%;
+    margin-top: 5%;
+    margin-left: 1%;
+    margin-right: 1%;
+}
+.course_card img{
+    width : 100%
+}
+.course_card p{
+    font-size: small;
+    font-weight: bold;
+}
+.course_card{
+    text-decoration: none;
+    color: black;
+}
+.checked{
+    color:orange;
+}
 /* small screens */
 @media (min-width: 1px){
     .navbar > *{
@@ -71,6 +155,19 @@ button:hover{
         flex-direction: row-reverse;
         justify-content: space-between;
     }
+    header{
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    header div{
+        width: 80%;
+        
+    }
+    header img{
+        width: 50%;
+        margin-left: 20%;
+        margin-right: 20%;
+    }
 }
 
 /* large screens */
@@ -84,5 +181,17 @@ button:hover{
     }
     button.mobileNav{
         display: none;
+    }
+
+    header{
+        flex-direction: row;
+    }
+    header div{
+        width: 35%;
+    }
+    header img{
+        width: 20%;
+        margin-left: 10%;
+        margin-right: 10%;
     }
 }
